2019-10-28  Uroš Bizjak  <ubizjak@gmail.com>

	PR target/92225
	* config/i386/sse.md (REDUC_SSE_SMINMAX_MODE): Use TARGET_SSE4_2
	condition for V2DImode.

2019-10-28  Uroš Bizjak  <ubizjak@gmail.com>

	* config/i386/sse.md (sse_cvtss2si<rex64namesuffix>_2):
	Remove %k operand modifier.
	(*vec_extractv2df_1_sse): Remove %q operand modifier.

2019-10-28  Ilya Leoshkevich  <iii@linux.ibm.com>

	PR rtl-optimization/92007
	* cfgcleanup.c (thread_jump): Add an assertion that we don't
	call it after reload if hot/cold partitioning has been done.
	(class pass_postreload_jump): Rename to
	pass_jump_after_combine.
	(make_pass_postreload_jump): Rename to
	make_pass_jump_after_combine.
	* passes.def(pass_postreload_jump): Move before reload, rename
	to pass_jump_after_combine.
	* tree-pass.h (make_pass_postreload_jump): Rename to
	make_pass_jump_after_combine.

2019-10-25  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/92242
	* ipa-fnsummary.c (ipa_merge_fn_summary_after_inlining): Check
	for missing EDGE_REF
	* ipa-prop.c (update_jump_functions_after_inlining): Likewise.

2019-10-25  Jiufu Guo  <guojiufu@linux.ibm.com>

	PR tree-optimization/88760
	* config/rs6000/rs6000-common.c (rs6000_option_optimization_table):
	Enable -funroll-loops for -O2 and above.
	* config/rs6000/rs6000.c (rs6000_option_override_internal): Set
	PARAM_MAX_UNROLL_TIMES to 2 and PARAM_MAX_UNROLLED_INSNS to 20, and
	do not turn on web and rngreg implicitly, if the unroller is not
	explicitly enabled.

2019-10-27  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-prop.c (ipa_propagate_indirect_call_infos): Do not remove
	jump functions.

2019-10-27  Eric Botcazou <ebotcazou@adacore.com>

	* cgraph.c (cgraph_node::rtl_info): Fix cut&pasto in comment.
	* cgraph.h (cgraph_node::rtl_info): Likewise.

2019-10-27  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-cp.c (propagate_constants_across_call): If args are not available
	just drop everything to varying.
	(find_aggregate_values_for_callers_subset): Watch for missing
	edge summary.